# qAegis

./: .gitattributes  .gitignore  CHANGELOG.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MIGRATION_SUMMARY.md  README.md  ROADMAP.md  STRUCTURE.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
contracts/: deployed_addresses.txt  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: PQCVerifier.sol  QRMSOracle.sol  SequencerAttestation.sol
contracts/test/: PQCVerifier.t.sol  QRMSOracle.t.sol  SequencerAttestation.t.sol
docs/: DIRECTORY_TREE.md  README.md
docs/api/: README.md
docs/architecture/: PHALA_SUMMARY.md  QVM_SUMMARY.md  README.md  aegis_tee.md  entanglement_routing.md  hybrid_integration.md  network_architecture.md  phala_integration.md  phase2_cryptography.md  phase3_tee.md  phase4_threat_intelligence.md  post_quantum_cryptography.md  qkd_protocols.md  qrms_implementation.md  quantum_protocol_survey.md  quantum_resistance_model.md  qvm_integration.md  stack_architecture.md  testbeds_demonstrations.md  threat_taxonomy.md
docs/deployment/: GITHUB_PAGES.md  (+3 more)
rollup/: Makefile  QUICKSTART.md  README.md  docker-compose.yml  env.example
scripts/: test-e2e-simple.sh  test-e2e.sh
services/qrms/: Cargo.toml  Dockerfile  QUICKSTART_PHALA.md  README.md  README_AEGIS_TEE.md  README_PHALA.md  phala.toml  qvm.toml
services/qrms/src/: aegis_tee.rs  apqc.rs  chain.rs  crypto.rs  handlers.rs  main.rs  phala_deploy.rs  phala_tee.rs  qrm.rs  qvm.rs  sequencer.rs  state.rs
services/qrms/static/: index.html
(+18 files in other folders)
